--- a/src/app/vehiculo/component/listar-vehiculos.component.html
+++ b/src/app/vehiculo/component/listar-vehiculos.component.html
@@ -1,3 +1,19 @@
-<p>
-  listar-vehiculos works!
-</p>
+<table class="table table-dark">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Marca</th>
+      <th scope="col">Linea</th>
+      <th scope="col">Modelo</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let vehiculo of vehiculos">
+      <th scope="row">1</th>
+      <td>{{ vehiculo.id }}</td>
+      <td>{{ vehiculo.marca }}</td>
+      <td>{{ vehiculo.linea }}</td>
+      <td>{{ vehiculo.modelo }}</td>
+    </tr>
+  </tbody>
+</table>
