--- a/src/app/vehiculo/component/listar-vehiculos.component.html
+++ b/src/app/vehiculo/component/listar-vehiculos.component.html
@@ -1,19 +1,38 @@
-<table class="table table-dark">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Marca</th>
-      <th scope="col">Linea</th>
-      <th scope="col">Modelo</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let vehiculo of vehiculos">
-      <th scope="row">1</th>
-      <td>{{ vehiculo.id }}</td>
-      <td>{{ vehiculo.marca }}</td>
-      <td>{{ vehiculo.linea }}</td>
-      <td>{{ vehiculo.modelo }}</td>
-    </tr>
-  </tbody>
-</table>
+<div class="fondo">
+  <div class="row">
+  <div class="col">
+    <div class="row enc1">
+    <h4 id="enc1">COMERCIALIZACIÓN DE AUTOMOTORES</h4>
+  </div>
+  <div class="row enc2">
+    <h4 id="enc2">NUEVOS Y USADOS</h4>
+  </div>
+  </div>
+    <div class="col">
+      <img src="https://www.elcarrocolombiano.com/wp-content/uploads/2016/12/20161203-VOLKSWAGEN-GOL-GT-CONCEPT-01.jpg">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <table class="table table-dark">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Marca</th>
+            <th scope="col">Linea</th>
+            <th scope="col">Modelo</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let vehiculo of vehiculos">
+            <td class="dato">{{ vehiculo.id }}</td>
+            <td class="dato">{{ vehiculo.marca }}</td>
+            <td class="dato">{{ vehiculo.linea }}</td>
+            <td class="dato">{{ vehiculo.modelo }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col"></div>
+  </div>
+</div>
