Versión final parcial1.

--- a/src/app/vehiculo/component/listar-vehiculos.component.html
+++ b/src/app/vehiculo/component/listar-vehiculos.component.html
@@ -28,7 +28,7 @@
             <th scope="col">Modelo</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody id="datos">
           <tr *ngFor="let vehiculo of vehiculos">
             <td class="dato">{{ vehiculo.id }}</td>
             <td class="dato">{{ vehiculo.marca }}</td>
