--- a/src/app/vehiculo/component/listar-vehiculos.component.html
+++ b/src/app/vehiculo/component/listar-vehiculos.component.html
@@ -46,4 +46,7 @@
     </div>
     <div class="col"></div>
   </div>
+  <div class="row">
+    <p class="infoFinal">Contact us +57 3102105253 -info@tusegundazo.com @tusegundazo</p>
+  </div>
 </div>
